[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Screen.gd" type="Script" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 320, 480 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Screen" type="Area2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen"]
position = Vector2( 320, 480 )
shape = SubResource( 2 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BeamLayer" type="CanvasLayer" parent="."]

[node name="EnemyLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ExplosionLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ShotLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="PlayerLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Player" parent="PlayerLayer" instance=ExtResource( 3 )]
position = Vector2( 320, 896 )

[node name="UfoLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="ScoreLayer" type="CanvasLayer" parent="."]
layer = 7

[node name="UfoTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[connection signal="area_exited" from="Screen" to="Screen" method="_on_Screen_area_exited"]
